added airbnb linting, changed file to jsx

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,12 @@
 {
-  "extends": ["react-app", "plugin:prettier/recommended", "prettier/react"]
+  "extends": ["react-app", "airbnb", "prettier/react"],
+  "rules": {
+    "no-unused-vars": "off",
+    "no-extend-native": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "react/forbid-prop-types": "off",
+    "react/prop-types": "off",
+    "camelcase": "off"
+  }
 }
