--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "apollo-boost": "^0.3.1",
     "classnames": "^2.2.6",
     "graphql": "^14.2.1",
+    "graphql-tag": "^2.10.1",
     "moment": "^2.24.0",
-    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
@@ -38,8 +38,10 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "node-sass": "^4.12.0",
     "prettier": "^1.17.0"
   },
   "proxy": "http://localhost:5000"
